# torch-multiplatform-demo

./: README.md  main.py  pyproject.toml
