[project]
name = "torch-multiplatform-demo"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = ["colorama>=0.4.6", "torch>=2.6.0", "torchvision>=0.21.0"]

# If we are on Linux, we assume that we are using CUDA 12.4
# If we are on MacOS, it will use the default repo, which will have mps support
[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
